welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:5: error: not found: value compeur
		compeur=compteur+1
                ^