welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfMaxValue(nums:Array[Int] ,value:Int): Int = {
	var n:Int=nums.length
	var compteur=0
	while (value!=nums(compteur)){
		compeur=compteur+1
	}
	return compteur
}
